Commit work in progress changes. Fix unset theme var, adjust radioactivity spacing.

--- a/scss/caffeinated.scss
+++ b/scss/caffeinated.scss
@@ -235,7 +235,7 @@ sup {
 }
 
 /* Hotness */
-.view-id-radioactivity > .view-content > div {
+.view-id-radioactivity.view-display-id-page_1 > .view-content > div {
   margin-bottom: 48px;
 }
 .view-id-radioactivity {
